crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__ignore_pyi.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/ignore_pyi.py
---
## Input

```python
# flags: --pyi
def f():  # type: ignore
    ...

class x:  # some comment
    ...

class y:
    ...  # comment

# whitespace doesn't matter (note the next line has a trailing space and tab)
class z:        
    ...

def g():
    # hi
    ...

def h():
    ...
    # bye
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,18 +1,26 @@
+# flags: --pyi
 def f():  # type: ignore
     ...
 
+
 class x:  # some comment
     ...
 
-class y: ...  # comment
 
+class y:
+    ...  # comment
+
+
 # whitespace doesn't matter (note the next line has a trailing space and tab)
-class z: ...
+class z:
+    ...
+
 
 def g():
     # hi
     ...
 
+
 def h():
     ...
     # bye
```

## Ruff Output

```python
# flags: --pyi
def f():  # type: ignore
    ...


class x:  # some comment
    ...


class y:
    ...  # comment


# whitespace doesn't matter (note the next line has a trailing space and tab)
class z:
    ...


def g():
    # hi
    ...


def h():
    ...
    # bye
```

## Black Output

```python
def f():  # type: ignore
    ...

class x:  # some comment
    ...

class y: ...  # comment

# whitespace doesn't matter (note the next line has a trailing space and tab)
class z: ...

def g():
    # hi
    ...

def h():
    ...
    # bye
```


