crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__ignore_pyi.pyi.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
def f():  # type: ignore
    ...

class x:  # some comment
    ...

class y:
    ...  # comment

# whitespace doesn't matter (note the next line has a trailing space and tab)
class z:        
    ...

def g():
    # hi
    ...

def h():
    ...
    # bye
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -3,7 +3,6 @@
 
 class x:  # some comment
     ...
-
 class y: ...  # comment
 
 # whitespace doesn't matter (note the next line has a trailing space and tab)
```

## Ruff Output

```python
def f():  # type: ignore
    ...

class x:  # some comment
    ...
class y: ...  # comment

# whitespace doesn't matter (note the next line has a trailing space and tab)
class z: ...

def g():
    # hi
    ...

def h():
    ...
    # bye
```

## Black Output

```python
def f():  # type: ignore
    ...

class x:  # some comment
    ...

class y: ...  # comment

# whitespace doesn't matter (note the next line has a trailing space and tab)
class z: ...

def g():
    # hi
    ...

def h():
    ...
    # bye
```
