crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__import_spacing.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/import_spacing.py
---
## Input

```python
"""The asyncio package, tracking PEP 3156."""

# flake8: noqa

from logging import (
    WARNING
)
from logging import (
    ERROR,
)
import sys

# This relies on each of the submodules having an __all__ variable.
from .base_events import *
from .coroutines import *
from .events import *  # comment here

from .futures import *
from .locks import *  # comment here
from .protocols import *

from ..runners import *  # comment here
from ..queues import *
from ..streams import *

from some_library import (
    Just, Enough, Libraries, To, Fit, In, This, Nice, Split, Which, We, No, Longer, Use
)
from name_of_a_company.extremely_long_project_name.component.ttypes import CuteLittleServiceHandlerFactoryyy
from name_of_a_company.extremely_long_project_name.extremely_long_component_name.ttypes import *

from .a.b.c.subprocess import *
from . import (tasks)
from . import (A, B, C)
from . import SomeVeryLongNameAndAllOfItsAdditionalLetters1, \
              SomeVeryLongNameAndAllOfItsAdditionalLetters2

__all__ = (
    base_events.__all__
    + coroutines.__all__
    + events.__all__
    + futures.__all__
    + locks.__all__
    + protocols.__all__
    + runners.__all__
    + queues.__all__
    + streams.__all__
    + tasks.__all__
)
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -52,13 +52,13 @@
 
 __all__ = (
     base_events.__all__
-    + coroutines.__all__
-    + events.__all__
-    + futures.__all__
-    + locks.__all__
-    + protocols.__all__
-    + runners.__all__
-    + queues.__all__
-    + streams.__all__
-    + tasks.__all__
+        + coroutines.__all__
+        + events.__all__
+        + futures.__all__
+        + locks.__all__
+        + protocols.__all__
+        + runners.__all__
+        + queues.__all__
+        + streams.__all__
+        + tasks.__all__
 )
```

## Ruff Output

```python
"""The asyncio package, tracking PEP 3156."""

# flake8: noqa

from logging import WARNING
from logging import (
    ERROR,
)
import sys

# This relies on each of the submodules having an __all__ variable.
from .base_events import *
from .coroutines import *
from .events import *  # comment here

from .futures import *
from .locks import *  # comment here
from .protocols import *

from ..runners import *  # comment here
from ..queues import *
from ..streams import *

from some_library import (
    Just,
    Enough,
    Libraries,
    To,
    Fit,
    In,
    This,
    Nice,
    Split,
    Which,
    We,
    No,
    Longer,
    Use,
)
from name_of_a_company.extremely_long_project_name.component.ttypes import (
    CuteLittleServiceHandlerFactoryyy,
)
from name_of_a_company.extremely_long_project_name.extremely_long_component_name.ttypes import *

from .a.b.c.subprocess import *
from . import tasks
from . import A, B, C
from . import (
    SomeVeryLongNameAndAllOfItsAdditionalLetters1,
    SomeVeryLongNameAndAllOfItsAdditionalLetters2,
)

__all__ = (
    base_events.__all__
        + coroutines.__all__
        + events.__all__
        + futures.__all__
        + locks.__all__
        + protocols.__all__
        + runners.__all__
        + queues.__all__
        + streams.__all__
        + tasks.__all__
)
```

## Black Output

```python
"""The asyncio package, tracking PEP 3156."""

# flake8: noqa

from logging import WARNING
from logging import (
    ERROR,
)
import sys

# This relies on each of the submodules having an __all__ variable.
from .base_events import *
from .coroutines import *
from .events import *  # comment here

from .futures import *
from .locks import *  # comment here
from .protocols import *

from ..runners import *  # comment here
from ..queues import *
from ..streams import *

from some_library import (
    Just,
    Enough,
    Libraries,
    To,
    Fit,
    In,
    This,
    Nice,
    Split,
    Which,
    We,
    No,
    Longer,
    Use,
)
from name_of_a_company.extremely_long_project_name.component.ttypes import (
    CuteLittleServiceHandlerFactoryyy,
)
from name_of_a_company.extremely_long_project_name.extremely_long_component_name.ttypes import *

from .a.b.c.subprocess import *
from . import tasks
from . import A, B, C
from . import (
    SomeVeryLongNameAndAllOfItsAdditionalLetters1,
    SomeVeryLongNameAndAllOfItsAdditionalLetters2,
)

__all__ = (
    base_events.__all__
    + coroutines.__all__
    + events.__all__
    + futures.__all__
    + locks.__all__
    + protocols.__all__
    + runners.__all__
    + queues.__all__
    + streams.__all__
    + tasks.__all__
)
```


