crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__line_ranges_fmt_off_overlap.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/line_ranges_fmt_off_overlap.py
---
## Input

```python
# flags: --line-ranges=11-17
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.


def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
# fmt: off
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
# fmt: on


def   myfunc(  ):  # This will be reformatted.
    print(  {"this will be reformatted"}  )
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -3,8 +3,10 @@
 # flag above as it's formatting specifically these lines.
 
 
-def   myfunc(  ):  # This will not be reformatted.
-    print(  {"also won't be reformatted"}  )
+def myfunc():  # This will not be reformatted.
+    print({"also won't be reformatted"})
+
+
 # fmt: off
 def   myfunc(  ):  # This will not be reformatted.
     print(  {"also won't be reformatted"}  )
```

## Ruff Output

```python
# flags: --line-ranges=11-17
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.


def myfunc():  # This will not be reformatted.
    print({"also won't be reformatted"})


# fmt: off
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
# fmt: on


def myfunc():  # This will be reformatted.
    print({"this will be reformatted"})
```

## Black Output

```python
# flags: --line-ranges=11-17
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.


def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
# fmt: off
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
def   myfunc(  ):  # This will not be reformatted.
    print(  {"also won't be reformatted"}  )
# fmt: on


def myfunc():  # This will be reformatted.
    print({"this will be reformatted"})
```


