crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__line_ranges_indentation.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/line_ranges_indentation.py
---
## Input

```python
# flags: --line-ranges=5-5
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
if cond1:
  print("first")
  if cond2:
    print("second")
  else:
    print("else")

if another_cond:
  print("will not be changed")
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -9,4 +9,4 @@
         print("else")
 
 if another_cond:
-  print("will not be changed")
+    print("will not be changed")
```

## Ruff Output

```python
# flags: --line-ranges=5-5
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
if cond1:
    print("first")
    if cond2:
        print("second")
    else:
        print("else")

if another_cond:
    print("will not be changed")
```

## Black Output

```python
# flags: --line-ranges=5-5
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.
if cond1:
    print("first")
    if cond2:
        print("second")
    else:
        print("else")

if another_cond:
  print("will not be changed")
```


